# malti_search

./: Cargo.toml  LICENSE  build  index.d.ts  index.js  package.json
.github/workflows/: CI.yml
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: db.rs  doc.txt  lib.rs  structs.rs  utils.rs
src/db/: context.rs  fetch.rs  mod.rs  search.rs
