[package]
edition = "2021"
name = "jg-tpl_malti_search"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = "1.0.188"
lazy_static = "1.5.0"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-sync"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
