[package]
edition = "2021"
name = "jg-tpl_malti_search"
version = "0.0.0"

[features]
default = ["log"]
log = []

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
futures = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.0"
lazy_static = "1.5.0"
tokio = "1.39.3"
once_cell = "1.19.0"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-sync"]

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
