[package]
edition = "2021"
name = "jg-tpl_malti_search"
version = "0.0.2"

[features]
default = ["log"]
log = []

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2.12.2"
futures = "0.3.28"
serde = "1.0.188"
serde_json = "1.0.0"
lazy_static = "1.5.0"
tokio = "1.39.3"
levenshtein = "1.0.5"
indicatif = "0.17.8"
rayon = "1.10"

[dependencies.mongodb]
version = "3.1.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
